<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>FillDataPage</class>
 <widget class="QWidget" name="FillDataPage">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>734</width>
    <height>553</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout_10">
   <item>
    <layout class="QVBoxLayout" name="verticalLayout_6">
     <item>
      <widget class="QLabel" name="lbl_get_ready">
       <property name="styleSheet">
        <string notr="true">font-size: 30px;
font-family: &quot;Comic Sans MS&quot;;
font: bold;</string>
       </property>
       <property name="text">
        <string>1. Get ready</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_You">
       <property name="styleSheet">
        <string notr="true">font-family: &quot;Comic Sans MS&quot;;</string>
       </property>
       <property name="title">
        <string>1. You</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
           <widget class="QLabel" name="lbl_name">
            <property name="styleSheet">
             <string notr="true">font-family: &quot;Comic Sans MS&quot;;</string>
            </property>
            <property name="text">
             <string>Name:</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="lbl_section">
            <property name="text">
             <string>Section:</string>
            </property>
           </widget>
          </item>
         </layout>
        </item>
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
           <widget class="QLineEdit" name="txt_username_input">
            <property name="text">
             <string>Demo User</string>
            </property>
            <property name="placeholderText">
             <string/>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QComboBox" name="comboBox_section"/>
          </item>
         </layout>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_Microphone">
       <property name="styleSheet">
        <string notr="true">font-family: &quot;Comic Sans MS&quot;;</string>
       </property>
       <property name="title">
        <string>2. Microphone</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_3">
          <item>
           <widget class="QLabel" name="img_microphone">
            <property name="text">
             <string>micImg</string>
            </property>
           </widget>
          </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_2">
            <item>
             <widget class="QComboBox" name="comboBox_audio_inputs"/>
            </item>
            <item>
             <spacer name="horizontalSpacer_3">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>40</width>
                <height>20</height>
               </size>
              </property>
             </spacer>
            </item>
           </layout>
          </item>
         </layout>
        </item>
        <item>
         <widget class="QProgressBar" name="progressBar_microphone">
          <property name="styleSheet">
           <string notr="true">border: 0px ;
background-color: rgb(70, 215, 0);</string>
          </property>
          <property name="value">
           <number>24</number>
          </property>
          <property name="textVisible">
           <bool>false</bool>
          </property>
         </widget>
        </item>
        <item>
         <layout class="QGridLayout" name="gridLayout_3">
          <item row="0" column="0">
           <widget class="QLabel" name="img_microphone_volume">
            <property name="text">
             <string>volImg1</string>
            </property>
           </widget>
          </item>
          <item row="0" column="1">
           <widget class="QSlider" name="horizontalSlider_microphone">
            <property name="styleSheet">
             <string notr="true">QSlider::groove:horizontal {
    border: 0px;
	
	background-color: rgb(48, 48, 48);
    height: 2px;
    margin: 0px;
    }
QSlider::handle:horizontal { 
	image: url(:/Images/Images/handle.png);
	border: 0px;
    height: 20px;
    width: 20px;
    margin: -15px 0px;
}</string>
            </property>
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
         </layout>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_Headphones">
       <property name="styleSheet">
        <string notr="true">font-family: &quot;Comic Sans MS&quot;;</string>
       </property>
       <property name="title">
        <string>3. Headphones</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_5">
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_5">
          <item>
           <widget class="QLabel" name="img_headphones">
            <property name="text">
             <string>setImg</string>
            </property>
           </widget>
          </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_4">
            <item>
             <widget class="QComboBox" name="comboBox_audio_outputs"/>
            </item>
            <item>
             <spacer name="horizontalSpacer_4">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>40</width>
                <height>20</height>
               </size>
              </property>
             </spacer>
            </item>
           </layout>
          </item>
         </layout>
        </item>
        <item>
         <widget class="QProgressBar" name="progressBar_headphones">
          <property name="styleSheet">
           <string notr="true">border: 0px ;
background-color: rgb(70, 215, 0);</string>
          </property>
          <property name="value">
           <number>24</number>
          </property>
          <property name="textVisible">
           <bool>false</bool>
          </property>
         </widget>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_7">
          <item>
           <widget class="QLabel" name="img_headphones_volume">
            <property name="text">
             <string>volImg2</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QSlider" name="horizontalSlider_headphones">
            <property name="styleSheet">
             <string notr="true">QSlider::groove:horizontal {
    border: 0px;
	background-color: rgb(48, 48, 48);
    height: 2px;
    margin: 0px;
    }
QSlider::handle:horizontal { 
	image: url(:/Images/Images/handle.png);
	border: 0px;
    height: 20px;
    width: 20px;
    margin: -15px 0px;
}</string>
            </property>
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
         </layout>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_9">
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_8">
            <item>
             <spacer name="horizontalSpacer_5">
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
                <width>40</width>
                <height>20</height>
               </size>
              </property>
             </spacer>
            </item>
            <item>
             <widget class="QLabel" name="label_9">
              <property name="text">
               <string>Test audio:</string>
              </property>
             </widget>
            </item>
           </layout>
          </item>
          <item>
           <widget class="QLabel" name="label_10">
            <property name="text">
             <string>Play_img</string>
            </property>
           </widget>
          </item>
         </layout>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <spacer name="verticalSpacer_2">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
         <height>28</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
   <item>
    <spacer name="horizontalSpacer">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>54</width>
       <height>20</height>
      </size>
     </property>
    </spacer>
   </item>
   <item>
    <widget class="Line" name="line">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
    </widget>
   </item>
   <item>
    <spacer name="horizontalSpacer_2">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>54</width>
       <height>20</height>
      </size>
     </property>
    </spacer>
   </item>
   <item>
    <layout class="QVBoxLayout" name="verticalLayout_7">
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <layout class="QGridLayout" name="gridLayout_2">
         <item row="3" column="1">
          <widget class="QPushButton" name="btn_join_member">
           <property name="enabled">
            <bool>true</bool>
           </property>
           <property name="styleSheet">
            <string notr="true">font-size: 16px;
font-family: &quot;Comic Sans MS&quot;;
font: bold;
color: rgb(255, 255, 255);
border-radius: 1px;
background-color: rgb(85, 0, 255);
/*For getting optimal results i will add an Image as background fot the button*/</string>
           </property>
           <property name="text">
            <string>Join</string>
           </property>
          </widget>
         </item>
         <item row="2" column="0">
          <widget class="QLabel" name="lbl_choir_member">
           <property name="styleSheet">
            <string notr="true">font-size: 14px;
font-family: &quot;Comic Sans MS&quot;;
font: bold;
color: purple</string>
           </property>
           <property name="text">
            <string>As Choir Member</string>
           </property>
          </widget>
         </item>
         <item row="1" column="0" colspan="2">
          <widget class="QLineEdit" name="ip_address_join_member">
           <property name="placeholderText">
            <string>IP address</string>
           </property>
          </widget>
         </item>
         <item row="0" column="0" colspan="2">
          <widget class="QLabel" name="lbl_join_choir">
           <property name="styleSheet">
            <string notr="true">font-size: 30px;
font-family: &quot;Comic Sans MS&quot;;
font: bold</string>
           </property>
           <property name="text">
            <string>2. Join a Choir room</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <widget class="QLabel" name="img_OR">
         <property name="text">
          <string>Image_OR_placeholder</string>
         </property>
        </widget>
       </item>
       <item>
        <layout class="QGridLayout" name="gridLayout">
         <item row="0" column="0" colspan="2">
          <widget class="QLabel" name="lbl_new_session">
           <property name="styleSheet">
            <string notr="true">font-size: 25px;
font-family: &quot;Comic Sans MS&quot;;
font: bold</string>
           </property>
           <property name="text">
            <string>3. Start a New Session</string>
           </property>
          </widget>
         </item>
         <item row="1" column="0">
          <widget class="QLabel" name="lbl_choir_leader">
           <property name="styleSheet">
            <string notr="true">font-size: 14px;
font-family: &quot;Comic Sans MS&quot;;
font: bold;
color: purple</string>
           </property>
           <property name="text">
            <string>As Choir Leader</string>
           </property>
          </widget>
         </item>
         <item row="2" column="1">
          <widget class="QPushButton" name="btn_join_leader">
           <property name="enabled">
            <bool>true</bool>
           </property>
           <property name="styleSheet">
            <string notr="true">font-size: 16px;
font-family: &quot;Comic Sans MS&quot;;
font: bold;
color: rgb(255, 255, 255);
border-radius: 1px;
background-color: rgb(85, 0, 255);
/*For getting optimal results i will add an Image as background fot the button*/</string>
           </property>
           <property name="text">
            <string>Join</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
     </item>
     <item>
      <spacer name="verticalSpacer_4">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
         <height>28</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
